--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- In Dutch? Change lang="en" to lang="nl" -->
-<html lang="en">
+<html lang="nl">
 
 <head>
 	<meta charset="utf-8">
@@ -26,7 +26,7 @@
 		</section>
 
 		<section class="content">
-
+			<h2 class="invisible">Intro</h2>
 			<p>
 				Kimberley is een technologisch schreefloos lettertype geïnspireerd door industriële bedrijfslogo's uit
 				de jaren zeventig.
@@ -149,8 +149,8 @@
 
 	</main>
 
-
+	<script src="javascript.js"></script>
 </body>
-<script src="javascript.js"></script>
+
 
 </html>
