--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 				In typografie en literatuur is een schreefloos, gotisch of eenvoudigweg schreefloos lettertype een
 				lettertype dat aan het einde van de streek geen uitbreidbare kenmerken heeft,
 				genaamd "schreven".
+				</p>
+				<p>
 				Sans-serif-lettertypen hebben doorgaans minder variatie in lijnbreedte dan serif-lettertypen. Ze worden
 				vaak gebruikt om eenvoud en moderniteit of minimalisme uit te drukken.
 				Voor typeclassificatie worden schreefloze ontwerpen gewoonlijk onderverdeeld in deze brede groepen:
@@ -54,6 +56,8 @@
 				gebruikt.
 				In 1816 heeft William Caslon de 4e een sans serif gecreeerd genaamd: Two Lines English Egyptian, die
 				aangevraagd werd door een client.
+				</p>
+				<p>
 				De Figgins foundry in londen heeft in 1830 een nieuwe sans serif gepubliceerd, die voornamelijk gebruikt
 				werd voor advertenties en kopstukken.
 				De font was gecondenseerd en vet, wat als resultaat de aandacht trok van iedereen die er naar keek.
@@ -139,11 +143,11 @@
 		</section>
 
 		<section class="content">
-			<h2>Uitproberen?</h2>
+			<h2>Probeer het uit!</h2>
 			<p class="displaytekst"></p>
 			<div class="name">
 				<input type="text">
-				<button type="button">Press</button>
+				<button type="button">Klik op mij</button>
 			</div>
 		</section>
 
